--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-paginate
-
+  - jekyll-theme-hamilton
 paginate: 10
 
 # Uncomment the below line and set the tracking ID for enabling Google Analytics
