--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,6 @@
 - title: Research
-  url: /about/
-- title: Years
-  url: /years/
-- title: Categories
-  url: /categories/
-- title: Tags
-  url: /tags/
-- title: More
-  sublinks:
-    - title: FAQ
-      url: /faq/
-    - title: Docs
-      url: /docs/
+  url: /research/
+- title: Teaching
+  url: /teaching/
+- title: CV
+  url: /CV/
