--- a/_data/social.yml
+++ b/_data/social.yml
@@ -4,3 +4,9 @@
 - title: GitHub
   url: https://github.com/ngzhio/jekyll-theme-hamilton
   icon: fab fa-github
+- title: LinkedIn
+  url: https://www.linkedin.com/in/landonbutler/
+  icon: fab fa-linkedin
+- title: Email
+  url: mailto:landonb3@seas.upenn.edu
+  icon: fab fa-envelope
