--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,7 +7,9 @@
 - title: GitHub
   url: https://github.com/landonbutler
   icon: fab fa-github
+- title: Twitter
+  url: https://twitter.com/Landon__Butler
+  icon: fab fa-twitter
 - title: GoogleScholar
   url: https://scholar.google.com/citations?user=tdJtfN8AAAAJ&hl=en
-  icon: fa_svg google-scholar
-
+  icon: ai ai-google-scholar-square
