--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Landon Butler
 author: Landon Butler
 avatar: /logo.png
+navbarLogo: /LB-logo.png
 email: landonb3@seas.upenn.edu
 
 plugins:
