--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 - title: Email
-  url: mailto:landonb3@seas.upenn.edu
+  url: mailto:landonb@berkeley.edu
   icon: fas fa-envelope
 - title: LinkedIn
   url: https://www.linkedin.com/in/landonbutler/
