--- a/_config.yml
+++ b/_config.yml
@@ -41,4 +41,4 @@ social:
 google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
 lang: en
 
-theme: jekyll-theme-hamilton
+# theme: jekyll-theme-hamilton
